<resources>
    <string name="app_name">KrestikiNoliki</string>
    <string name="app_name_full">TIC\nTAC\nTOE</string>
    <string name="new_game">NEW GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="statistics">STATISTICS</string>
    <string name="exit">EXIT</string>
    <string name="back">BACK</string>
    <string name="to_menu">TO MENU</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="about_text">Tic Tac Toe Game\nDeveloped for Android Lab Work</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_stats">Reset Statistics</string>
    <string name="reset_confirm">Are you sure you want to reset all statistics?</string>
    <string name="share">Share</string>
    <string name="share_text">My Tic Tac Toe stats - X Wins: %d, O Wins: %d, Draws: %d</string>
    <string name="player_x">Player X</string>
    <string name="player_o">Player O</string>
    <string name="x_wins_default">Wins: 0</string>
    <string name="o_wins_default">Wins: 0</string>
    <string name="draws">Draws</string>
    <string name="draws_default">Draws: 0</string>
    <string name="enter_names">ENTER\nPLAYER NAMES</string>
    <string name="player_x_hint">Player X name</string>
    <string name="player_o_hint">Player O name</string>
    <string name="start_game">START GAME</string>
    <string name="results">Results</string>
    <string name="start_again">PLAY AGAIN</string>
    <string name="made_move">made a move</string>
    <string name="won">won!</string>
    <string name="draw">Draw!</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="exit_confirm">Are you sure you want to exit? Current game will be lost.</string>
</resources>