<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="70dp"
    android:paddingBottom="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/app_name_full"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margin_large"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_xlarge"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/margin_xlarge">

            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/button_green_shadow"
                android:gravity="center"
                android:text="@string/new_game"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/button_green_shadow"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnStatistics"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/button_green_shadow"
                android:gravity="center"
                android:text="@string/statistics"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_large"
        android:background="@drawable/button_red_shadow"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />
</LinearLayout>