<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:paddingTop="80dp"
    android:paddingBottom="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_xlarge"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_names"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_medium" />

            <EditText
                android:id="@+id/playerOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/ic_xicon"
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center_vertical"
                android:hint="@string/player_x_hint"
                android:maxLines="1"
                android:paddingStart="55dp"
                android:paddingEnd="@dimen/margin_medium"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/playerTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/ic_oicon"
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center_vertical"
                android:hint="@string/player_o_hint"
                android:maxLines="1"
                android:paddingStart="55dp"
                android:paddingEnd="@dimen/margin_medium"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="italic" />

            <Button
                android:id="@+id/startGameButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_large"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/button_green_shadow"
                android:gravity="center"
                android:text="@string/start_game"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/button_red_shadow"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>